--- a/views/login_u.ejs
+++ b/views/login_u.ejs
@@ -12,7 +12,7 @@
 
 
     <div class="container">
-        <form action="/usuario/login_u" method="post">
+        <form action="/usuario/login" method="post">
             <h1>Login</h1>
             <label for="usuario">Usuário:</label>
             <input type="usuario" id="usuario" name="usuario" placeholder="" maxlength="100">
