--- a/public/css/farm.css
+++ b/public/css/farm.css
@@ -11,16 +11,14 @@ body {
     font-family: Arial, sans-serif;
 }
 
-
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(135deg, #fffaca, #c9ffca);
+    background: linear-gradient(135deg, #c9ffca, #fffaca);
     padding: 10px 50px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-
 
 .logo-container {
     display: flex;
@@ -31,7 +29,6 @@ header {
     height: 50px;
 }
 
-
 nav ul {
     list-style: none;
     display: flex;
@@ -40,14 +37,12 @@ nav ul {
     gap: 30px;
 }
 
-
 nav ul li a {
     text-decoration: none;
     color: #000;
     font-weight: bold;
     font-size: 16px;
 }
-
 
 .perfil-icon {
     height: 40px;
@@ -58,7 +53,79 @@ nav ul li a {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-
 nav ul li a:hover {
     color: #007bff;
 }
+
+.perfil-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    position: relative;
+}
+
+.perfil-btn img {
+    width: 30px;
+    height: 30px;
+}
+
+.modal {
+    display: none; 
+    position: absolute;
+    top: 55px; 
+    right: 10px; 
+    z-index: 2;
+    width: 200px;
+    background-color: #fefefe;
+    border-radius: 15px; /* Aplica o border-radius a todo o modal */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.modal-content {
+    border-radius: 15px; /* Aplica o border-radius à div de conteúdo */
+    overflow: hidden; /* Para garantir que o conteúdo siga o border-radius */
+}
+
+.modal-content ul {
+    list-style: none;
+    padding: 0;
+}
+
+.modal-content li {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    background-color: #FFFACD;
+    display: flex;
+    align-items: center;
+}
+
+.modal-content li button {
+    display: flex;
+    align-items: center;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+}
+
+.modal-content li button:hover {
+    background-color: #f0f0f0;
+}
+
+.modal-content li img.icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+
+.modal.show {
+    display: block;
+}
+
+
