--- a/public/css/user.css
+++ b/public/css/user.css
@@ -57,6 +57,71 @@ nav ul li a:hover {
     color: #007bff;
 }
 
+.form-container {
+    width: 400px; 
+    padding: 20px; 
+    margin: 50px auto;
+    border: 1px solid #ccc;
+    border-radius: 10px; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.form-container h2 {
+    margin-bottom: 25px;
+    font-size: 24px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.form-group label {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.form-actions {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cancel-button, .submit-button {
+    width: 48%;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: white;
+}
+
+.cancel-button {
+    background-color: #D32F2F;
+}
+
+.submit-button {
+    background-color: #4CAF50;
+}
+
+.cancel-button:hover {
+    background-color: #b71c1c;
+}
+
+.submit-button:hover {
+    background-color: #388E3C;
+}
+
 .perfil-btn {
     background: none;
     border: none;
@@ -78,13 +143,13 @@ nav ul li a:hover {
     z-index: 2;
     width: 200px;
     background-color: #fefefe;
-    border-radius: 15px; /* Aplica o border-radius a todo o modal */
+    border-radius: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .modal-content {
-    border-radius: 15px; /* Aplica o border-radius à div de conteúdo */
-    overflow: hidden; /* Para garantir que o conteúdo siga o border-radius */
+    border-radius: 15px;
+    overflow: hidden;
 }
 
 .modal-content ul {
@@ -127,4 +192,3 @@ nav ul li a:hover {
 .modal.show {
     display: block;
 }
-
