--- a/views/user.ejs
+++ b/views/user.ejs
@@ -25,7 +25,7 @@
                 </li>
             </ul>
         </nav>
-        
+
         <div id="perfilModal" class="modal">
             <div class="modal-content">
                 <ul>
@@ -44,28 +44,54 @@
         </div>
     </header>
 
+    <div class="form-container">
+        <h2>Cadastrar usuário</h2>
+        <form action="#" method="POST">
+            <div class="form-group">
+                <label for="nome">Nome Completo</label>
+                <input type="text" id="nome" name="nome" required>
+            </div>
 
+            <div class="form-group">
+                <label for="telefone">Telefone</label>
+                <input type="tel" id="telefone" name="telefone" required>
+            </div>
 
-    
+            <div class="form-group">
+                <label for="usuario">Usuário</label>
+                <input type="text" id="usuario" name="usuario" required>
+            </div>
+
+            <div class="form-group">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" name="senha" required>
+            </div>
+
+            <div class="form-actions">
+                <button type="button" class="cancel-button" onclick="window.location.href='/gestor/home'">Cancelar</button>
+                <button type="submit" class="submit-button">Cadastrar</button>
+            </div>
+        </form>
+    </div>
+
     <script>
-            // Pegar o botão e o modal
-    const openModalBtn = document.getElementById('openModalBtn');
-    const modal = document.getElementById('perfilModal');
+        // Pegar o botão e o modal
+        const openModalBtn = document.getElementById('openModalBtn');
+        const modal = document.getElementById('perfilModal');
 
-    // Quando o botão for clicado, mostra ou esconde o modal
-    openModalBtn.onclick = function(event) {
-        event.stopPropagation(); // Evita que o clique no botão feche o modal
-        modal.classList.toggle('show'); // Alterna a visibilidade do modal
-    };
+        // Quando o botão for clicado, mostra ou esconde o modal
+        openModalBtn.onclick = function(event) {
+            event.stopPropagation(); // Evita que o clique no botão feche o modal
+            modal.classList.toggle('show'); // Alterna a visibilidade do modal
+        };
 
-    // Fecha o modal ao clicar fora dele
-    window.onclick = function(event) {
-        if (!modal.contains(event.target) && event.target !== openModalBtn) {
-            modal.classList.remove('show'); // Remove a classe 'show' para fechar o modal
-        }
-    };
+        // Fecha o modal ao clicar fora dele
+        window.onclick = function(event) {
+            if (!modal.contains(event.target) && event.target !== openModalBtn) {
+                modal.classList.remove('show'); // Remove a classe 'show' para fechar o modal
+            }
+        };
     </script>
 
 </body>
 </html>
-
