--- a/views/user.ejs
+++ b/views/user.ejs
@@ -18,6 +18,7 @@
             <ul>
                 <li><a href="/gestor/services">SERVIÇOS</a></li>
                 <li><a href="/gestor/farm">FAZENDAS</a></li>
+                <li><a href="/gestor/users">USUÁRIOS</a></li> 
                 <li>
                     <button class="perfil-btn" id="openModalBtn">
                         <img src="/images/perfil.svg" alt="Perfil" class="perfil-icon">
@@ -46,30 +47,30 @@
 
     <div class="form-container">
         <h2>Cadastrar usuário</h2>
-        <form action="#" method="POST">
+        <form action="/gestor/user" method="POST">
             <div class="form-group">
-                <label for="nome">Nome Completo</label>
-                <input type="text" id="nome" name="nome" required>
+              <label for="nome">Nome Completo</label>
+              <input type="text" id="nome" name="nome" required>
             </div>
-
+          
             <div class="form-group">
-                <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" name="telefone" required>
+              <label for="telefone">Telefone</label>
+              <input type="tel" id="telefone" name="telefone" required>
             </div>
-
+          
             <div class="form-group">
-                <label for="usuario">Usuário</label>
-                <input type="text" id="usuario" name="usuario" required>
+              <label for="usuario">Usuário</label>
+              <input type="text" id="usuario" name="usuario" required>
             </div>
-
+          
             <div class="form-group">
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" required>
+              <label for="senha">Senha</label>
+              <input type="password" id="senha" name="senha" required>
             </div>
-
+          
             <div class="form-actions">
-                <button type="button" class="cancel-button" onclick="window.location.href='/gestor/home'">Cancelar</button>
-                <button type="submit" class="submit-button">Cadastrar</button>
+              <button type="button" class="cancel-button" onclick="window.location.href='/gestor/home'">Cancelar</button>
+              <button type="submit" class="submit-button">Cadastrar</button>
             </div>
         </form>
     </div>
