--- a/views/user.ejs
+++ b/views/user.ejs
@@ -16,6 +16,7 @@
 
         <nav>
             <ul>
+                <li><a href="/gestor/home">OPERAÇÕES</a></li>
                 <li><a href="/gestor/services">SERVIÇOS</a></li>
                 <li><a href="/gestor/farm">FAZENDAS</a></li>
                 <li><a href="/gestor/users">USUÁRIOS</a></li> 
